# Thales_OpenGL_Cube

./: CMakeLists.txt  README.md
includes/: stb_image.h
includes/cwalk/: cwalk.c  cwalk.h
includes/glad/: glad.c
includes/glad/include/glad/: glad.h
includes/glfw/: glfw3.h  glfw3native.h
includes/glm/: glm.hpp
includes/glm/ext/: matrix_clip_space.hpp  matrix_projection.hpp
resources/fragments/: Thales3DCube_Fragment_Shader.fs
resources/vertex/: Thales3DCube_VertexTriangle_Shader.vs
src/: Thales_Cube.cpp
src/shader/: Shader.cpp  Shader.h  ShaderBuilder.cpp  ShaderBuilder.h  ShaderProgram.cpp  ShaderProgram.h  ShaderProgramBuilder.cpp  ShaderProgramBuilder.h
src/shape/: Cube.cpp  Cube.h  Pyramid.cpp  Pyramid.h  Shape.cpp  Shape.h  ShapeFactory.cpp  ShapeFactory.h
src/texture/: Texture.cpp  Texture.h  TextureFactory.cpp  TextureFactory.h
src/tools/: TranslationTool.cpp  TranslationTool.h
